dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/indent.c)
AM_INIT_AUTOMAKE(indent, 0.1)

dnl Checks for programs.
AC_PROG_CC

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_FUNC_MEMCMP
AC_FUNC_VPRINTF

AC_OUTPUT(Makefile src/Makefile)
